# SirsiNexus

./: .env.backup  .gitattributes  .gitignore  .warp_rules  ACCOUNT_MANAGEMENT_CRITICAL_FIXES.md  BRUTAL_REALITY_ASSESSMENT.md  CHANGELOG.md  COMPREHENSIVE_DEVELOPMENT_BLUEPRINT.md  CONSOLIDATION_COMPLETE.md  CORRECTED_HARD_ASSESSMENT_PHASE_1.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DEVELOPMENT_GUIDE.md  ELITE_CDB_PHASE3_RESUMPTION_PROMPT.md  ELITE_CDB_RESUMPTION_PROMPT.md  ELITE_RESUMPTION_PROMPT.md  EXECUTIVE_HARD_ASSESSMENT_SUMMARY.md  FINAL_STATUS_SUMMARY.md  HARD_ASSESSMENT_PHASE_1_REALITY.md  HARD_ASSESSMENT_REPORT.md  INFRASTRUCTURE_BUILDER_IMPLEMENTATION.md  INTEGRATION_STATUS.md  KUBERNETES_DEPLOYMENT_SUMMARY.md  LICENSE  MILESTONE_REPORT.md  PHASE3_STATUS_UPDATE.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  PHASE_3_COMPLETION_SUMMARY.md  PHASE_4_AI_ENHANCEMENT.md  PLATFORM_SETUP.md  PRODUCTION_READINESS_IMPLEMENTATION_PLAN.md  PRODUCTION_READINESS_RESUMPTION_PROMPT.md  PROJECT_SUMMARY.md  PROJECT_TRACKER.md  QUICK_DEPLOY.md  README.md  REAL_APP_DEMO_ARCHITECTURE.md  REAL_DEMO_IMPLEMENTATION_PLAN.md  RESUMPTION_PROMPT.md  RESUMPTION_PROMPT_OLD.md  (+27 more)
core-engine/: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.prod  Dockerfile.security  PHASE1_COMPLETION_REPORT.md  PHASE3_STATUS_UPDATE.md  PHASE_3_IMPLEMENTATION_COMPLETE.md  README.md  VERSION.md  build.rs  docker-compose.yml
core-engine/.sqlx/: query-4d0d49c081ae26bd0a7dcbe8a7fcfc2b4df340281cc729e2b2cae2ecd4c7db6a.json  query-9a4213c7cdba5201f19878591862324d9f4d678a375737ed99094ef5711d0788.json  query-a78f045f6bfebda2ae99258cc06877c3efa6b90a4227cd6fd616cf2f390873fc.json  query-dc2e4ef5720e6996590920cc5bff59ca22b024ca0e9184fa76f2cafe1aea1050.json
core-engine/config/: default.yaml  test.yaml
core-engine/core-engine/: TEST_HANGING_ISSUE_FIXED.md
core-engine/crates/automation/src/workflow/: mod.rs
core-engine/crates/aws-agent/: Cargo.toml  build.rs
core-engine/crates/aws-agent/proto/: aws_agent.proto
core-engine/crates/aws-agent/src/: error.rs  lib.rs  service.rs
core-engine/crates/aws-agent/src/aws/: client.rs  config.rs  discovery.rs  mod.rs
core-engine/crates/compute-manager/: Cargo.toml  build.rs
core-engine/crates/compute-manager/proto/: compute.proto
core-engine/crates/compute-manager/src/: lib.rs
core-engine/crates/compute-manager/src/autoscaling/: mod.rs
core-engine/crates/container-manager/: Cargo.toml  build.rs
core-engine/crates/container-manager/proto/: container.proto
core-engine/crates/container-manager/src/: error.rs  lib.rs
core-engine/crates/core/: Cargo.toml
core-engine/crates/core/migrations/: 20250625000000_initial_schema.sql
core-engine/crates/core/src/: auth.rs  config.rs  db.rs  error.rs  main.rs  telemetry.rs
core-engine/crates/core/src/api/: auth.rs  (+4 more)
core-engine/crates/identity-manager/: Cargo.toml  build.rs
core-engine/crates/identity-manager/proto/: identity.proto
core-engine/crates/identity-manager/src/: error.rs  lib.rs
core-engine/crates/key-vault/: Cargo.toml  build.rs
core-engine/crates/key-vault/proto/: key_vault.proto
core-engine/crates/key-vault/src/: error.rs  lib.rs
core-engine/docs/: IMPLEMENTATION_STATUS.md  OPERATIONS_GUIDE.md  PROJECT_STATUS.md  README.md  TECHNICAL_ARCHITECTURE.md
core-engine/docs/archive/: ACHIEVEMENT_RECORD.md  README.md  azure_sdk_integration_plan.md
core-engine/docs/archive/api/: README.md
core-engine/docs/archive/components/: api-gateway.md  authentication.md  cache.md  cli.md  compute-manager.md  database.md  messaging.md  ml-platform.md  secrets.md  storage-engine.md  storage.md  tasks.md
core-engine/docs/archive/installation/: README.md
core-engine/docs/components/: backup.md  configuration.md  events.md  integration.md  load_balancer.md  monitoring.md  telemetry.md
core-engine/k8s/: deployment.yaml
core-engine/migrations/: 20250625141343_create_tables.sql  20250625143000_add_user_name.sql  20250704165500_add_rbac_tables.sql  add_audit_logs.sql
core-engine/proto/: agent.proto
core-engine/scripts/: dev.sh  setup-db.sh
core-engine/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  main_unified.rs  server.rs  telemetry.rs
core-engine/src/agent/: context.rs  loader.rs  manager.rs  manager.rs.bak  mod.rs  service.rs
core-engine/src/agent/connectors/: aws.rs  azure.rs  gcp.rs  mod.rs
core-engine/src/agent/implementations/: aws.rs  aws.rs.backup  azure.rs  mod.rs
core-engine/src/ai/: feature_awareness.rs  hypervisor_integration.rs  mod.rs
core-engine/src/ai/decision/: engine.rs  mod.rs
core-engine/src/ai/learning/: mod.rs
core-engine/src/ai/optimization/: mod.rs
core-engine/src/ai/orchestration/: engine.rs  mod.rs
core-engine/src/api/: ai.rs  auth.rs  mod.rs  projects.rs  resources.rs
core-engine/src/audit/: events.rs  mod.rs
core-engine/src/auth/: mod.rs  rbac.rs
core-engine/src/communication/: event_bus.rs  message_schemas.rs  mod.rs
core-engine/src/compliance/: gdpr.rs  mod.rs  soc2.rs
core-engine/src/components/: mod.rs  success_metrics_checklist.rs
core-engine/src/config/: mod.rs  production.rs
core-engine/src/hypervisor/: coordinator.rs  mod.rs  scheduler.rs
core-engine/src/mcp/: README.md  client.rs  mod.rs  protocol.rs  server.rs  types.rs
core-engine/src/middleware/: auth.rs  authorization.rs  mod.rs
core-engine/src/models/: mod.rs  project.rs  resource.rs  user.rs
core-engine/src/proto/: mod.rs
core-engine/src/protos/: mod.rs
core-engine/src/security/: mod.rs  spiffe.rs  vault.rs
core-engine/src/server/: agent_service_impl.rs  agent_service_impl_old.rs  grpc.rs  http.rs  mod.rs  websocket.rs  websocket.rs.bak
core-engine/src/services/: ai_infrastructure_service.rs  ai_optimization_service.rs  mod.rs
core-engine/src/telemetry/: dashboard.rs  error.rs  metrics.rs  mod.rs  opentelemetry.rs  performance.rs  prometheus.rs
core-engine/tests/: agent_integration_tests.rs  ai_service_integration_test.rs  auth_integration_test.rs  cockroachdb_integration.rs  e2e_auth_crud_test.rs  grpc_integration_tests.rs  integration_tests.rs  user_model_e2e.rs
(+530 files in other folders)
