[workspace]
members = [
    "core-engine",
    "cli"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SirsiMaster"]
description = "Sirsi Nexus - Agent-embedded migration & infrastructure platform"

[workspace.dependencies]
tokio = { version = "1.28", features = ["full"] }
tonic = "0.9"
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
