[workspace]
members = [
    "core-engine"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SirsiMaster"]
description = "Sirsi Nexus - Agent-embedded migration & infrastructure platform"

[workspace.dependencies]
tokio = { version = "1.28", features = ["full"] }
k8s-openapi = { version = "0.20", features = ["v1_27"] }
tonic = "0.9"
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
