[package]
name = "sirsi-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sirsi-core"
path = "src/main.rs"

[lib]
name = "sirsi_core"
path = "src/lib.rs"

[dependencies]
# Web framework
axum = { version = "0.6.20", features = ["macros", "headers"] }
axum-core = "0.3.4"
axum-macros = "0.3.8"
hyper = { version = "0.14" }
k8s-openapi = { version = "0.20", features = ["v1_27"] }
tower = { version = "0.4", features = ["timeout", "limit"] }
tower-http = { version = "0.5", features = ["trace", "cors", "limit"] }

# gRPC and Protobuf
tonic = { version = "0.10.2", features = ["transport", "codegen"] }
tonic-build = { version = "0.10.2", features = ["prost"] }
tonic-reflection = "0.10.2"
tokio-stream = "0.1"
prost = "0.12"
prost-types = "0.12"

# OpenTelemetry
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
opentelemetry_sdk = { version = "0.20", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.13", features = ["tonic", "tls", "tls-roots"] }
opentelemetry-semantic-conventions = "0.12"
tracing-opentelemetry = "0.20"

# Database (CockroachDB uses PostgreSQL protocol)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json", "chrono"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = { version = "0.15", features = ["yaml"] }

# Authentication
jsonwebtoken = "9.2"
argon2 = "0.5"

# Utilities
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
validator = { version = "0.20", features = ["derive"] }
futures = "0.3"
http = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-build = { version = "0.10", features = ["prost"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
serial_test = "3.0"

