[package]
name = "sirsi-aws-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# AWS SDK
aws-config = "1.0"
aws-sdk-ec2 = "1.0"
aws-sdk-rds = "1.0"
aws-sdk-s3 = "1.0"
aws-sdk-iam = "1.0"
aws-sdk-eks = "1.0"
aws-sdk-cloudformation = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and metrics
tracing = "0.1"
opentelemetry = { version = "0.20", features = ["trace"] }
opentelemetry-semantic-conventions = "0.12"

# gRPC
tonic = { version = "0.10", features = ["transport", "tls"] }
prost = "0.12"

# Utilities
async-trait = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
aws-smithy-runtime = { version = "1.0", features = ["test-util"] }

[build-dependencies]
tonic-build = "0.10"
