[package]
name = "sirsi-compute-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
# Cloud Provider SDKs
aws-config = "1.0"
aws-sdk-ec2 = "1.0"
aws-sdk-lambda = "1.0"
aws-sdk-autoscaling = "1.0"
aws-sdk-cloudwatch = "1.0"
azure_mgmt_compute = "0.16"
azure_mgmt_network = "0.16"
azure_mgmt_storage = "0.16"
azure_identity = "0.16"
google-cloud-compute1 = "5.0"
google-cloud-functions1 = "5.0"
google-cloud-monitoring2 = "5.0"

# Serverless Runtime
lambda_runtime = "0.8"
azure_functions = "0.10"
cloud_functions = "0.11"

# Auto-scaling
prometheus_client = "0.21"
predictive_scale = "0.5"
metrics-runtime = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and metrics
tracing = "0.1"
opentelemetry = { version = "0.20", features = ["trace"] }
opentelemetry-semantic-conventions = "0.12"

# gRPC
tonic = { version = "0.10", features = ["transport", "tls"] }
prost = "0.12"

# Optimization
optimization = "0.3"
linear-programming = "0.8"
resource-manager = "0.4"

# Utilities
async-trait = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
validator = { version = "0.16", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.8"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
aws-smithy-runtime = { version = "1.0", features = ["test-util"] }
azure_core = { version = "0.16", features = ["test-util"] }
google-cloud-test = "0.3"
test-case = "3.3"

[build-dependencies]
tonic-build = "0.10"
