[package]
name = "sirsi-compute-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
# Cloud Provider SDKs - temporarily removed

# Auto-scaling
prometheus-client = "0.21"
metrics-runtime = "0.13"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and metrics
tracing = "0.1"
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry-semantic-conventions = "0.13"

# gRPC
tonic = { version = "0.10", features = ["transport", "tls"] }
prost = "0.12"

# Optimization - temporarily removed

# Utilities
async-trait = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
validator = { version = "0.17", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.8"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
test-case = "3.3"

[build-dependencies]
tonic-build = "0.10"
