[package]
name = "sirsi-container-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
# Container Runtime
k8s-openapi = { version = "0.20", features = ["v1_27"] }
kube = { version = "0.87", features = ["runtime", "derive"] }
kube-runtime = "0.87"
k8s-gateway-api = "0.12"
flate2 = "1.0"
tar = "0.4"

# Container Registry
oci-distribution = "0.10"
docker_credential = "1.3"
regex = "1.10"

# Service Mesh

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and metrics
tracing = "0.1"
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry-semantic-conventions = "0.13"

# gRPC
tonic = { version = "0.10", features = ["transport", "tls"] }
prost = "0.12"

# Security
jwt-simple = "0.12"
x509-parser = "0.15"
openssl = { version = "0.10", features = ["vendored"] }

# Utilities
async-trait = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
validator = { version = "0.17", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.8"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
k8s-openapi = { version = "0.20", features = ["v1_27"] }
kube = { version = "0.87", features = ["runtime", "derive", "client", "rustls-tls"] }
test-case = "3.3"

[build-dependencies]
tonic-build = "0.10"
