[package]
name = "sirsi-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# HTTP
axum = { version = "0.7", features = ["macros", "http2"] }
hyper = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
tokio-stream = "0.1"
http = "1.0"

# gRPC
tonic = { version = "0.10", features = ["transport", "tls"] }
prost = "0.12"
prost-types = "0.12"

# Crypto
jsonwebtoken = "9.2"
argon2 = { version = "0.5", features = ["password-hash"] }

# Async Runtime
tokio = { version = "1.35", features = ["full"] }
futures = { version = "0.3", features = ["std"] }

# Configuration
config = "0.15"
dotenvy = "0.15"

# Telemetry
opentelemetry = { version = "0.21", features = ["trace", "rt-tokio", "metrics"] }
opentelemetry-api = { version = "0.20", features = ["metrics"] }
opentelemetry-semantic-conventions = "0.13"
opentelemetry-otlp = { version = "0.14", features = ["metrics", "trace", "tonic", "grpc-tonic"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.22"

# Validation
validator = { version = "0.17", features = ["derive"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

[build-dependencies]
tonic-build = "0.10"
