[package]
name = "sirsi-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# HTTP
axum = { version = "0.7", features = ["macros", "http2"] }
hyper = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
tokio-stream = "0.1"
http = "1.0"

# gRPC
tonic = { version = "0.10", features = ["transport", "tls"] }
prost = "0.12"
prost-types = "0.12"

# Crypto
jsonwebtoken = "9.2"
argon2 = { version = "0.5", features = ["password-hash"] }
ring = "0.17"
base64 = "0.22"
rand = "0.8"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }
futures = { version = "0.3", features = ["std"] }

# Configuration
config = "0.15"
dotenvy = "0.15"

# Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Validation
validator = { version = "0.17", features = ["derive"] }

# Cloud Provider SDKs
aws-config = "1.1"
aws-sdk-ec2 = "1.15"
aws-sdk-s3 = "1.15"
aws-sdk-sts = "1.15"
aws-credential-types = "1.2"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde", "macros", "parsing", "formatting"] }
async-trait = "0.1"

[build-dependencies]
tonic-build = "0.10"
